grammar.ebnf
(*
  Minimal grammar for the Mojo subset used by ivi_standalone.mojo.
  Matches the parser in parser.js and AST in ast.d.ts.

  Tokens: ID, NUMBER, STRING, keywords (trait, struct, def, var, if, else, while,
  for, in, return, and, or, not, True, False, Self, None, Bool, Int, List,
  Copyable, Movable, continue, pass, mut, out, deinit, comptime, ref, raise,
  try, except, raises, elif);
  symbols: ( ) [ ] : , . ^ * ** // = == != < <= > >= + - % -> ;
  INDENT/DEDENT from leading spaces; NEWLINE.

  Rules use token names in UPPER for terminals; lowercase for nonterminals.
*)

program         = { trait_def | struct | function } ;

trait_def       = "trait" ID [ "(" trait_ref { "," trait_ref } ")" ] ":" INDENT trait_body DEDENT ;
trait_ref       = ID ;
trait_body      = { trait_method } ;
trait_method    = "def" ID "(" param_list ")" [ "->" type ] ":" block ;

struct          = "struct" ID [ "(" trait_ref { "," trait_ref } ")" ] ":" INDENT struct_body DEDENT ;
trait           = ID ;
struct_body     = { field | method } ;
field           = "var" ID [ ":" type ] [ "=" expression ] ;
method          = "def" ID "(" param_list ")" [ "raises" ] [ risk_annot ] [ "->" type ] ":" block ;

param_list      = { param "," } [ param ] ;
param           = [ "out" | "mut" ] "self" [ ":" type ]
                | "*"
                | [ "deinit" | "var" ] ID ":" type
                | [ "out" | "mut" ] ID [ ":" type ]
                | ID [ ":" type ] ;

function        = "def" ID [ "[" type_param { "," type_param } "]" ]
                  "(" param_list ")" [ "raises" ] [ risk_annot ] [ "->" type ] ":" block ;
type_param      = ID ":" type ;

(* Experimental --feature risk *)
risk_annot      = "risk" "(" risk_name { "|" risk_name } ")" ;
risk_stmt       = "risk" "(" risk_clause { "|" risk_clause } ")" ":" block ;
risk_clause     = risk_name | risk_name "if" expression "else" risk_name ;
risk_name       = ID ;


block           = INDENT { statement } DEDENT
                | statement ;

statement       = "var" ID [ ":" type ] [ "=" expression ]
                | "if" expression ":" block { "elif" expression ":" block } [ "else" ":" block ]
                | "while" expression ":" block
                | [ "comptime" ] "for" [ "ref" ] ID "in" expression ":" block
                | "return" [ expression ]
                | "continue"
                | "pass"
                | "raise" expression
                | "try" ":" block "except" [ ID ] ":" block
                | expression ( "=" | "+=" | "-=" ) expression
                | expression ;

type            = "List" "[" type "]"
                | "Int" | "Bool" | "Self" | "None"
                | ID ;

(* Expressions: precedence from lowest to highest *)
expression      = or_expr ;

or_expr         = and_expr { "or" and_expr } ;
and_expr        = compare_expr { "and" compare_expr } ;
compare_expr    = add_expr { ( "==" | "!=" | "<" | "<=" | ">" | ">=" ) add_expr } ;
add_expr        = mul_expr { ( "+" | "-" ) mul_expr } ;
mul_expr        = unary_expr { ( "*" | "/" | "//" | "%" ) unary_expr } ;
unary_expr      = [ "not" | "-" ] postfix_expr ;
postfix_expr    = primary_expr { "." ID | "(" [ expression { "," expression } ] ")"
                | "[" expression "]" | "[" type "]" "(" [ expression { "," expression } ] ")" | "^" } ;

primary_expr    = NUMBER
                | STRING
                | "True" | "False"
                | "None"
                | ID
                | "List" "[" type "]" [ "(" [ expression ] ")" ]
                | "[" [ expression { "," expression } ] "]"
                | "(" expression ")" ;
